# group-based-policy-automation

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
gbpautomation/: __init__.py
gbpautomation/heat/engine/clients/os/: grouppolicy.py
gbpautomation/heat/engine/resources/: gbpresource.py  grouppolicy.py  servicechain.py
gbpautomation/heat/engine/resources/neutron/: gbpresource.py  grouppolicy.py  servicechain.py
gbpautomation/heat/tests/: test_gbpautomation.py  test_grouppolicy.py  test_servicechain.py
