[metadata]
name = group-based-policy-automation
summary = Group Based Policy Automation
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    gbpautomation

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = gbpautomation/locale
domain = group-based-policy-automation

[update_catalog]
domain = group-based-policy-automation
output_dir = gbpautomation/locale
input_file = gbpautomation/locale/group-based-policy-automation.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gbpautomation/locale/group-based-policy-automation.pot

[entry_points]
heat.clients =
    grouppolicy = gbpautomation.heat.engine.clients.os.grouppolicy:GBPClientPlugin
